modules/gdscript/tests/scripts/analyzer/errors/enum_native_bad_value.gd
func test():
	var _bad = TileSet.TileShape.THIS_DOES_NOT_EXIST
